Fix Surefire configuration (#173)